--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,7 @@
 {
   "thanks": "14400",
   "points-user": "10",
-  "leaderboard-pagesize": "5"
+  "leaderboard-pagesize": "5",
+  "sharedUniques": "gamejam_2018",
+  "uniques": "Team Fuchsia,Team Blue,Team Green,Team Yellow"
 }
