Ensuring templates are followed in the jobs category

--- a/settings.json
+++ b/settings.json
@@ -3,5 +3,6 @@
   "points-user": "10",
   "leaderboard-pagesize": "5",
   "sharedUniques": "gamejam_2018",
-  "uniques": "Team Fuchsia,Team Blue,Team Green,Team Yellow"
+  "uniques": "Team Fuchsia,Team Blue,Team Green,Team Yellow",
+  "massivecodeblock-ignore": "348067890542673943"
 }
