--- a/settings.json
+++ b/settings.json
@@ -3,6 +3,5 @@
   "points-user": "10",
   "leaderboard-pagesize": "5",
   "sharedUniques": "gamejam_2018",
-  "uniques": "Team Fuchsia,Team Blue,Team Green,Team Yellow",
-  "massivecodeblock-ignore": "348067890542673943"
+  "uniques": "Team Fuchsia,Team Blue,Team Green,Team Yellow"
 }
