--- a/settings.json
+++ b/settings.json
@@ -2,6 +2,7 @@
     "thanks": "14400",
     "points-user": "10",
     "leaderboard-pagesize": "5",
+    "staff-role": "Staff",
     "sharedUniques": "gamejam_2018",
     "uniques": "Team Fuchsia,Team Blue,Team Green,Team Yellow"
 }
