--- a/settings.json
+++ b/settings.json
@@ -1,15 +1,7 @@
 {
-<<<<<<< HEAD
-  "points-user": "10",
-  "leaderboard-pagesize": "5",
-  "sharedUniques": "gamejam_2018",
-  "uniques": "Team Fuchsia,Team Blue,Team Green,Team Yellow"
-=======
-    "thanks": "14400",
-    "points-user": "10",
     "leaderboard-pagesize": "5",
     "staff-role": "Staff",
+    "guru-role": "Guru",
     "sharedUniques": "gamejam_2018",
     "uniques": "Team Fuchsia,Team Blue,Team Green,Team Yellow"
->>>>>>> b82355bbbc857021a064ac63671194e04e6050d2
 }
