Added mute-related commands. Will clean up my crappy code tomorrow and add the rest of the moderation features. Please do not touch until I have time to clean up the code.

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ cooldowns.json
 rules.json
 settings.json
 custom-commands.json
+mute.json
+event-points.json
 
 # Exclude .vscode folder
 .vscode/
