--- a/template-settings.json
+++ b/template-settings.json
@@ -3,5 +3,6 @@
     "staff-role": "Staff",
     "guru-role": "Guru",
     "sharedUniques": "gamejam_2018",
-    "uniques": "Team Fuchsia,Team Blue,Team Green,Team Yellow"
+    "uniques": "Team Fuchsia,Team Blue,Team Green,Team Yellow",
+    "articlesChannelId": ""
 }
