Removed accidental settings.json changes

--- a/template-settings.json
+++ b/template-settings.json
@@ -3,6 +3,5 @@
     "staff-role": "Staff",
     "guru-role": "Guru",
     "sharedUniques": "gamejam_2018",
-    "uniques": "Team Fuchsia,Team Blue,Team Green,Team Yellow",
-    "articlesChannelId": ""
+    "uniques": "Team Fuchsia,Team Blue,Team Green,Team Yellow"
 }
