--- a/settings.json
+++ b/settings.json
@@ -3,6 +3,5 @@
   "staff-role": "Staff",
   "guru-role": "Guru",
   "sharedUniques": "gamejam_2018",
-  "uniques": "Team Fuchsia,Team Blue,Team Green,Team Yellow",
-  "articlesChannelId": "495578972130639884"
+  "uniques": "Team Fuchsia,Team Blue,Team Green,Team Yellow"
 }
