--- a/src/BrackeysBot.csproj
+++ b/src/BrackeysBot.csproj
@@ -4,6 +4,12 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <ApplicationIcon>logo.ico</ApplicationIcon>
+    <Authors>Ian Hornik</Authors>
+    <Company>YilianSource</Company>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile></DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
