--- a/src/BrackeysBot.csproj
+++ b/src/BrackeysBot.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <ApplicationIcon>logo.ico</ApplicationIcon>
     <Authors>Ian Hornik</Authors>
     <Company>YilianSource</Company>
@@ -13,14 +13,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CSharpMath" Version="0.4.2" />
-    <PackageReference Include="CSharpMath.SkiaSharp" Version="0.4.2" />
-    <PackageReference Include="Discord.Net" Version="2.1.1" />
-    <PackageReference Include="Humanizer.Core" Version="2.7.9" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.10.0-1.final" />
-    <PackageReference Include="PasteMystNet" Version="1.1.1" />
-    <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
-    <PackageReference Include="YamlDotNet" Version="8.0.0" />
+    <PackageReference Include="CSharpMath" Version="0.5.1" />
+    <PackageReference Include="CSharpMath.SkiaSharp" Version="0.5.1" />
+    <PackageReference Include="Discord.Net" Version="3.6.1" />
+    <PackageReference Include="Humanizer.Core" Version="2.14.1" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.1.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="PasteMystNet" Version="1.2.1" />
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+    <PackageReference Include="YamlDotNet" Version="11.2.1" />
   </ItemGroup>
 
 </Project>
